# django-snacks

./: README.md  db.sqlite3  pyproject.toml
django_snacks/: settings.py  urls.py
django_snacks/django_snacks/: settings.py  urls.py
snacks/: urls.py
templates/: about.html  base.html  home.html
